# LangChainAgent

./: .env  .env.example  .env.local.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: adr-checker.md  docs-checker.md  pattern-scout.md  research-agent.md  research-synthesizer.md  test-runner.md
.claude/commands/: add-tool.md  create-issue.md  implement-issue.md  research-agents.md  review-pr-comments.md
adr/: 0001-python-and-uv.md  0002-langchain-without-llm.md  0003-three-routing-paths.md  0004-tracing-langsmith-then-langfuse.md  0005-repl-entry-point.md  0006-pytest-and-tdd.md  0007-multi-turn-memory-via-thread-id.md
src/mathagent/: __init__.py  __main__.py  agent.py  chain.py  chat_model.py  graph.py  parser.py  repl.py  tools.py  tracing.py
tests/: conftest.py  test_agent.py  test_chain.py  test_graph.py  test_parser.py  test_tools.py  test_tracing.py
